# DocAgentBench

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  main.py  pyproject.toml
api/models/: documents.py
api/routers/: ingest.py
streamlit_app/: Dockerfile  app.py
