[project]
name = "docagent-bench-api"
version = "0.1.0"
description = "DocAgent Bench - AI Document Evaluation API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "aiofiles>=24.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
]